# refactoring-bank-kata

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  account.py  bank.py  clock.py  interest_calculator.py  printer.py  transaction.py  transaction_repository.py
src/step_by_step_refactors/: bank_refactor_1_renaming.py  bank_refactor_2_primitive_obsession.py  bank_refactor_3_dispensables.py  bank_refactor_4_large_class.py  bank_refactor_5_large_class.py
tests/: test_account.py  test_bank_acceptance.py  test_clock.py  test_interest_calculator.py  test_printer.py  test_transaction.py  test_transaction_repository.py
tests/step_by_step_refactors/: test_bank_refactor_1_renaming.py  test_bank_refactor_2_primitive_obsession.py  test_bank_refactor_3_dispensables.py  test_bank_refactor_4_large_class.py  test_bank_refactor_5_large_class.py  test_bank_refactor_6_typing.py
