[tool.poetry]
name = "refactoringbankkata"
version = "0.1.0"
description = ""
authors = ["Pablo Martínez Pérez <pablompg@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
